basalt/src/snapshots/basalt_tui__outline__tests__atx_style_with_closing_hashes.snap
---
source: basalt/src/outline.rs
expression: terminal.backend()
---
"╭Outline─────────────────────╮"
"│ ▾ Heading 1                │"
"│ │ ▾ Heading 2              │"
"│ │ │ ▾ Heading 3            │"
"│ │ │ │ ▾ Heading 4 #### with│"
"│ │ │ │ │   Heading 5 ###### │"
"│                            │"
"│                            │"
"│                            │"
"╰────────────────────────────╯"
