basalt/src/snapshots/basalt_tui__outline__tests__boundary_conditions_systematic.snap
---
source: basalt/src/outline.rs
expression: terminal.backend()
---
"╭───────────────── ▶ Outline ╮"
"│ ▾ A                        │"
"│ │ ▾ B                      │"
"│ │ │ ▾ C                    │"
"│ │ │ │ ▾ D                  │"
"│ │ │ │ │ ▾ E                │"
"│ │ │ │ │ │   F              │"
"│ │ │ │ │   E2               │"
"│ │ │ │   D2                 │"
"╰────────────────────────────╯"
