basalt/src/snapshots/basalt_tui__outline__tests__duplicate_headings.snap
---
source: basalt/src/outline.rs
expression: terminal.backend()
---
"╭───────────────── ▶ Outline ╮"
"│ ▾ Duplicate                │"
"│ │   Child                  │"
"│ ▾ Duplicate                │"
"│ │   Different Child        │"
"│   Duplicate                │"
"│                            │"
"│                            │"
"│                            │"
"╰────────────────────────────╯"
