basalt/src/snapshots/basalt_tui__outline__tests__irregular_nesting_with_skips.snap
---
source: basalt/src/outline.rs
expression: terminal.backend()
---
"╭───────────────── ▶ Outline ╮"
"│ ▾ Heading 1                │"
"│ │   Heading 2              │"
"│ │ ▾ Heading 2.1            │"
"│ │ │   Heading 2.1.1        │"
"│ │ │   Heading 2.1.2        │"
"│ │ ▾ Heading 2.2            │"
"│ │ │   Heading 3            │"
"│                            │"
"╰────────────────────────────╯"
