basalt/src/snapshots/basalt_tui__outline__tests__mixed_with_content.snap
---
source: basalt/src/outline.rs
expression: terminal.backend()
---
"╭───────────────── ▶ Outline ╮"
"│ ▾ Chapter 1                │"
"│ │ ▾ Section 1.1            │"
"│ │ │   Subsection 1.1.1     │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"╰────────────────────────────╯"
