basalt/src/snapshots/basalt_tui__outline__tests__multiple_root_levels.snap
---
source: basalt/src/outline.rs
expression: terminal.backend()
---
"╭───────────────── ▶ Outline ╮"
"│ ▾ Root 1                   │"
"│ │ ▾ Child 1.1              │"
"│ │ │   Child 1.1.1          │"
"│ │ ▾ Root 2 (different leve │"
"│ │ │   Child 2.1 (skipped l │"
"│ │ │ ▾ Root 3 (different le │"
"│ │ │ │   Child 3.1 (deep sk │"
"│                            │"
"╰────────────────────────────╯"
