basalt/src/snapshots/basalt_tui__outline__tests__numbered_headings.snap
---
source: basalt/src/outline.rs
expression: terminal.backend()
---
"╭Outline─────────────────────╮"
"│ ▾ 1. First Chapter         │"
"│ │   1.1 First Section      │"
"│ │   1.2 Second Section     │"
"│ ▾ 2. Second Chapter        │"
"│ │ ▾ 2.1 First Section      │"
"│ │ │   2.1.1 Subsection     │"
"│ │ │   2.1.2 Another Subsect│"
"│ │   2.2 Second Section     │"
"╰────────────────────────────╯"
