basalt/src/snapshots/basalt_tui__outline__tests__only_deep_level.snap
---
source: basalt/src/outline.rs
expression: terminal.backend()
---
"╭───────────────── ▶ Outline ╮"
"│   Heading 1                │"
"│ ▾ Heading 2                │"
"│ │   Heading 2.1            │"
"│ │   Heading 2.2            │"
"│   Heading 3                │"
"│ ▾ Heading 4                │"
"│ │   Heading 4.1            │"
"│   Heading 5                │"
"╰────────────────────────────╯"
